--- a/public/CSS/style-landing.css
+++ b/public/CSS/style-landing.css
@@ -1,38 +1,130 @@
-body{
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Poppins, sans-serif;
+}
+
+body {
     background-color: #ffc436;
+    min-height: 100vh;
 }
 
+/* navbar */
 
-.grid-container{
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    background-color: #ffc436;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.logo {
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
+    font-size: 32px;
+}
+
+.navbar a {
+    font-size: 16px;
+    margin-left: 40px;
+    text-decoration: none;
+    color: white;
+    position: relative;
+}
+
+.navbar a::before {
+    content: "";
+    position: absolute;
+    top: 100%;
+    width: 0;
+    left: 0;
+    height: 2px;
+    background: white;
+    transition: 0.3s;
+}
+
+.navbar a:hover::before {
+    width: 100%;
+}
+
+/* =========== */
+
+/* content 1 */
+.grid-container {
     display: grid;
-  grid-template-columns: auto auto auto auto;
-  gap: 10px;
-  justify-content: center;
-  
-  padding: 10px;
+    grid-template-columns: auto auto auto auto;
+    gap: 10px;
+    justify-content: center;
+    height: 100vh;
+    padding: 0 5%;
 }
 
-.grid-item{
+.grid-item {
     margin-top: 100px;
+    padding: 20px;
+    align-items: center;
+}
+
+.konten {
+    width: 50%x;
+    margin-top: 200px;
+    padding-right: 100px;
+}
+
+.gambar {
+    width: 50%;
+}
+
+p {
+    text-align: justify;
+}
+
+/* container btn */
+.container-button {
+    display: flex;
+    margin-left: -20px;
+}
+
+.item-button {
     padding: 20px;
 }
 
-p{
- text-align: justify;
-}
-
-button{
-    padding: 10px 30px;
-    border-radius: 20px;
+.btn1 button {
     background-color: white;
-    cursor: pointer;
-    color: black;
-    font-weight: 700;
+    padding: 15px 50px;
     border: none;
+    border-radius: 10px;
+    font-weight: 600;
+    cursor: pointer;
 }
 
-button:hover{
-    background-color: black;
+.btn1 button:hover {
+    border: 2px white solid;
+    background-color: #ffc436;
     color: white;
 }
 
+.btn2 button {
+    background-color: #ffc436;
+    padding: 15px 50px;
+    border: 2px white solid;
+    border-radius: 10px;
+    font-weight: 600;
+    cursor: pointer;
+    color: white;
+}
+
+.btn2 button:active {
+    background-color: white;
+    color: black;
+    box-shadow: 5px 10px 18px #c4c4c4;
+}
